--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "cp ../.env ./dev.vars && wrangler dev",
+    "dev": "wrangler dev",
     "start": "wrangler dev",
     "test": "vitest",
     "cf-typegen": "wrangler types"
-  },
+    },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.2",
     "@cloudflare/workers-types": "^4.20241011.0",
     "typescript": "^5.5.2",
     "vitest": "2.0.5",
     "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "@grpc/grpc-js": "^1.12.2",
+    "@grpc/proto-loader": "^0.7.13",
+    "@supabase/supabase-js": "^2.45.4",
+    "@types/google-protobuf": "^3.15.12",
+    "@types/uuid": "^10.0.0",
+    "async-generator": "^0.1.0",
+    "axios": "^1.7.7",
+    "google-protobuf": "^3.21.4",
+    "grpc-tools": "^1.12.4",
+    "uuid": "^10.0.0"
   }
 }
