--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "wrangler dev",
     "test": "vitest",
     "cf-typegen": "wrangler types"
-    },
+  },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.2",
     "@cloudflare/workers-types": "^4.20241011.0",
@@ -24,6 +24,7 @@
     "@types/uuid": "^10.0.0",
     "async-generator": "^0.1.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "google-protobuf": "^3.21.4",
     "grpc-tools": "^1.12.4",
     "uuid": "^10.0.0"
