--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/uuid": "^10.0.0",
     "async-generator": "^0.1.0",
     "axios": "^1.7.7",
+    "cloudflare-workers-cors": "^0.0.1",
     "cors": "^2.8.5",
     "google-protobuf": "^3.21.4",
     "grpc-tools": "^1.12.4",
+    "itty-router": "^5.0.18",
     "uuid": "^10.0.0"
   }
 }
