--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-	"printWidth": 140,
-	"singleQuote": true,
+	"printWidth": 100,
 	"semi": true,
-	"useTabs": true
+	"useTabs": true,
+	"tabWidth": 2,
+	"trailingComma": "es5",
+	"bracketSpacing": true,
+	"arrowParens": "avoid",
+	"endOfLine": "auto"
 }
