--- a/package.json
+++ b/package.json
@@ -2,33 +2,33 @@
   "name": "bob-worker",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
     "test": "vitest",
-    "cf-typegen": "wrangler types"
-  },
-  "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.5.2",
-    "@cloudflare/workers-types": "^4.20241011.0",
-    "typescript": "^5.5.2",
-    "vitest": "2.0.5",
-    "wrangler": "^3.60.3"
+    "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "build": "tsc"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.12.2",
-    "@grpc/proto-loader": "^0.7.13",
-    "@supabase/supabase-js": "^2.45.4",
-    "@types/google-protobuf": "^3.15.12",
-    "@types/uuid": "^10.0.0",
-    "async-generator": "^0.1.0",
-    "axios": "^1.7.7",
-    "cloudflare-workers-cors": "^0.0.1",
-    "cors": "^2.8.5",
-    "google-protobuf": "^3.21.4",
-    "grpc-tools": "^1.12.4",
-    "itty-router": "^5.0.18",
-    "uuid": "^10.0.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "hono": "^3.11.7",
+    "twitter-api-v2": "^1.18.2",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241216.0",
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^0.0.1-alpha.0",
+    "vitest": "^1.0.4",
+    "wrangler": "^3.22.1"
   }
 }
