--- a/wrangler.toml
+++ b/wrangler.toml
@@ -18,3 +18,8 @@ FRONTEND_URL = "http://localhost:5173"
 FAKE_API = false
 GROK_API_KEY = "your-grok-key"
 GROK_BASE_URL = "https://your-grok-endpoint/v1"
+TWITTER_API_KEY = "your-twitter-api-key"
+TWITTER_API_SECRET = "your-twitter-api-secret"
+TWITTER_ACCESS_TOKEN_SECRET = "your-twitter-access-token-secret"
+TWITTER_ACCESS_TOKEN = "your-twitter-access-token"
+TWITTER_BEARER_TOKEN = "your-twitter-bearer-token"
